@@ -60,7 +60,7 @@ IconsManager::IconsManager()
 	ThemeManager->setCurrentTheme(config_file.readEntry("Look", "IconTheme"));
 	configurationUpdated();
 
-	config_file.writeEntry("Look", "IconTheme", ThemeManager->currentTheme().path());
+	config_file.writeEntry("Look", "IconTheme", ThemeManager->currentTheme().name());
 
 	// TODO: localized protocol
 	localProtocolPath = "gadu-gadu";
@@ -224,12 +224,12 @@ void IconsManager::clearCache()
 
 void IconsManager::configurationUpdated()
 {
-	bool themeWasChanged = config_file.readEntry("Look", "IconTheme") != ThemeManager->currentTheme().path();
+	bool themeWasChanged = config_file.readEntry("Look", "IconTheme") != ThemeManager->currentTheme().name();
 	if (themeWasChanged)
 	{
 		clearCache();
 		ThemeManager->setCurrentTheme(config_file.readEntry("Look", "IconTheme"));
-		config_file.writeEntry("Look", "IconTheme", ThemeManager->currentTheme().path());
+		config_file.writeEntry("Look", "IconTheme", ThemeManager->currentTheme().name());
 
 		emit themeChanged();
 	}
