@@ -1127,6 +1127,10 @@ changes upon establishing connection to the server</source>
         <source>Turn on blur</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>None</source>
+        <translation>Ничего</translation>
+    </message>
 </context>
 <context>
     <name>About</name>
@@ -3635,13 +3639,6 @@ Maybe it&apos;s not Kadu-compatible plugin.</source>
     <message>
         <source>More Actions...</source>
         <translation type="unfinished">Дополнительные действия...</translation>
-    </message>
-</context>
-<context>
-    <name>ThemeManager</name>
-    <message>
-        <source>None</source>
-        <translation>Ничего</translation>
     </message>
 </context>
 <context>
