@@ -23,6 +23,7 @@
 * core: #2559 fixed: StatusContainer::status() should return actual status instead of desired one (ultr)
 * gui: #2069 fixed: toggle checkboxes when the items are clicked in Delete Buddy window (ultr)
 * gui: #2447 fixed: after pressing tilde and a character in chat window, a message was mistakenly being sent (beevvy)
+* themes: #2541 fixed: store emoticon and icon themes in configuration only by name (beevvy)
 
 +++ version 0.12.0-beta1
 * tabs: "Close all tabs but active one" action added (Juzef)
